# xgboostcpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: Config.cmake.in
cmake/Hunter/: config.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/xgboostcpp/: Booster.h  CMakeLists.txt  XGBooster.cpp  XGBooster.h  XGBoosterIOArchiveBoost.cpp  XGBoosterIOArchiveCereal.cpp  XGBoosterImpl.h  stdlib_string.h  to_string.h  xgboostcpp_def.h  xgboostcpp_serialize.h
src/lib/xgboostcpp/ut/: CMakeLists.txt  boston_test.cpp  boston_test.h  boston_train.cpp  boston_train.data  boston_train.h  test-xgboostcpp-regression.cpp
src/test/: CMakeLists.txt  test-xgbooster.cpp
